syntax = "proto3";

option go_package = ".";

package main;

service LoadBalancer {
  // RPC to get backend server status
  rpc GetBackendStatus(BackendRequest) returns (BackendStatus);

  // RPC to send and receive real-time control information via streaming
  rpc ControlStream(stream ControlMessage) returns (stream ControlResponse);
}

// Backend server status request message
message BackendRequest {
  string server_name = 1;  // Server name
}

// Backend server status response message
message BackendStatus {
  bool is_healthy = 1;  // Server health status
}

// Control message (Client -> Server)
message ControlMessage {
  string command = 1;  // Command to execute
  int64 payload = 2;  // Data related to the command
}

// Control response message (Server -> Client)
message ControlResponse {
  string status = 1;  // Execution status
  int64 payload = 2;    // Detailed information
}